adjustments to routes and index.js
